# world_model

./: .gitattributes  .gitignore  _main.py  all-files.txt  check_data.py  check_data_merged.py  check_file.py  data_merge.py  inspect_data.py  main_world_model.py  pyproject.toml  record.sh  robot_control.py  robot_control_.py  test_world_model.py  trans_data.py  trans_data_lerobot.py
.cache/calibration/: koch.pkl
conf/: conf.yaml  data_info.yaml
data_merged2/: states.blosc2
data_merged3/: actions.blosc2
inspection_output_episode_1/: frame_0_values.txt  frame_1_values.txt  frame_2_values.txt  frame_3_values.txt
lerobot/: check_data.py  main.py  pyproject.toml  record.sh  requirements.txt  result_show.py  robot_control.py  robot_simulation.py  typos.toml
lerobot/conf/: conf.yaml  data_info.yaml
lerobot/data_merged/: cache-03139aadb357b4db_00000_of_00004.arrow  cache-03139aadb357b4db_00001_of_00004.arrow  cache-03139aadb357b4db_00002_of_00004.arrow  cache-03139aadb357b4db_00003_of_00004.arrow  cache-03804f77bc776363_00000_of_00004.arrow  cache-03804f77bc776363_00001_of_00004.arrow  cache-03804f77bc776363_00002_of_00004.arrow  cache-03804f77bc776363_00003_of_00004.arrow  cache-0421c68ab3cdd7c9_00000_of_00004.arrow  cache-0421c68ab3cdd7c9_00001_of_00004.arrow  cache-0421c68ab3cdd7c9_00002_of_00004.arrow  cache-0421c68ab3cdd7c9_00003_of_00004.arrow  cache-0435989f8e917e81_00000_of_00004.arrow  cache-0435989f8e917e81_00001_of_00004.arrow  cache-0435989f8e917e81_00002_of_00004.arrow  cache-0435989f8e917e81_00003_of_00004.arrow  (+423 more)
lerobot/src/: conf.py
src/: conf.py
(+221 files in other folders)
